# Barabas-GTK

./: CMakeLists.txt  README.md
lib/: barabas.vala  connection_status.vala  dbus_connection.vala  download.vala  file_info.vala  host_configuration.vala  local_file.vala  search.vala  synced_file.vala  synced_file_version.vala  user_password_authentication.vala
share/: barabas-gtk.ui  barabas-search.desktop.in
src/: connect_dialog.vala  download.vala  main.vala  search_window.vala  system_tray.vala  user_password_authentication_dialog.vala
